Fix insta icon alignment

--- a/src/contact.css
+++ b/src/contact.css
@@ -139,7 +139,7 @@
       margin-left: 70px;
     }
 
-    .fa-instagram {
+    .icons .fa-instagram {
       margin-left: 80px;
     }
 
